--- a/L3_3.html
+++ b/L3_3.html
@@ -13,24 +13,24 @@
                 <th>Year</th>
             </tr>
             <tr style="font-weight: lighter;">
-                <th>Python</th>
-                <th>Guido Van Rossum</th>
-                <th>1991</th>
+                <td>Python</td>
+                <td>Guido Van Rossum</td>
+                <td>1991</td>
             </tr>
             <tr style="font-weight: lighter;">
-                <th>Javascript</th>
-                <th>Brendan Eich</th>
-                <th>1995</th>
+                <td>Javascript</td>
+                <td>Brendan Eich</td>
+                <td>1995</td>
             </tr>
             <tr style="font-weight: lighter;">
-                <th>CSS</th>
-                <th>Håkon Wium Lie</th>
-                <th>1996</th>
+                <td>CSS</td>
+                <td>Håkon Wium Lie</td>
+                <td>1996</td>
             </tr>
             <tr style="font-weight: lighter;">
-                <th>HTML</th>
-                <th>Tim Berners-Lee</th>
-                <th>1990</th>
+                <td>HTML</td>
+                <td>Tim Berners-Lee</td>
+                <td>1990</td>
             </tr>
           </table>
         </center>
